[package]
name = "iguana-workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
linked-hash-map = "0.5.6"
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.8.26"
